# pylog

./: Dockerfile  Makefile  Pipfile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
pylog/: __init__.py  cli.py  logger.py
tests/: __init__.py  test_cli.py  test_logger.py
