[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylog"
description = "A light-weight wrapper of standard log."

readme = "README.md"
version = "0.1.0"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers"
]
keywords = ["pylog"]

[project.urls]
repository = "https://github.com/berquerant/pylog"

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

[project.scripts]
pylog = "pylog.cli:main"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.flake8]
max-line-length = 120
ignore = [
  "E203",
  "W503",
  "W504"
]
statistics = true

[tool.mypy]
ignore_missing_imports = true